# diddo-hooks

./: .gitignore  AGENTS.md  CODE_REVIEW.md  Cargo.toml  LICENSE.md  README.md  cliff.toml  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml  test.yml
docs/plans/: 2026-03-10-ai-response-cache-design.md  2026-03-10-diddo-design.md  2026-03-10-diddo-implementation.md  2026-03-10-prompt-instructions-design.md  2026-03-10-prompt-instructions.md  2026-03-12-update-command-design.md  2026-03-12-update-command-implementation.md  2026-03-23-manual-onboarding-design.md  2026-03-23-manual-onboarding-implementation.md
src/: activity_report.rs  config.rs  db.rs  hook.rs  init.rs  interactive.rs  main.rs  onboarding.rs  paths.rs  render.rs  summary_group.rs  update.rs
src/ai/: api_provider.rs  cli_provider.rs  mod.rs
