[package]
name = "diddo"
version = "0.1.0"
edition = "2024"
description = "Track your git commits, get AI-powered daily summaries"
license = "MIT"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
chrono = "0.4.44"
rusqlite = { version = "0.38.0", features = ["bundled"] }
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.6"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
