[package]
name = "diddo"
version = "0.1.0"
edition = "2024"
description = "Track your git commits, get AI-powered daily summaries"
license = "MIT"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
chrono = "0.4.42"
rusqlite = { version = "0.38.0", features = ["bundled"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
